--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "sense-header-user",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "展示公用导航及头像，用户等",
-  "main": "./src/nav-user.js",
+  "main": "./src/nav-user.es5.min.js",
   "scripts": {
     "start": "webpack serve",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
+    "babel": "babel src/js/nav-user.js -o src/js/nav-user.es5.js",
+    "uglifyjs": "uglifyjs src/js/nav-user.es5.js -m -c -o src/js/nav-user.es5.min.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -27,7 +29,11 @@
     "html-webpack-plugin": "^4.5.0",
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-3": "^6.24.1",
+    "uglify-js": "^3.12.0"
   },
   "dependencies": {
     "axios": "^0.21.0",
